enhanced the UI bugs in navbar and arabic font spacing.

--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -132,7 +132,7 @@
   /* Dropdown Menus */
   .navbar-dropdown {
     position: absolute;
-    top: 100%;
+    top: 90%;
     left: 0;
     z-index: 50;
     margin-top: 0.25rem;
